# mats-kommune

./: .pdm-python  README.md  distance_matrix_calculation.ipynb  pyproject.toml
data/: admsenternavn.csv  admsenternavn_coordinates.csv  municipal_centres.csv
data/result/: distance_matrix.csv  time_matrix.csv
src/: compute_distances.py  google_maps_funcs.py
