[project]
name = "MatsKommuneProj"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mats", email = "mats"},
]
dependencies = ["googlemaps>=4.10.0", "black>=25.1.0", "python-dotenv>=1.1.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
